--- a/core/pom.xml
+++ b/core/pom.xml
@@ -45,5 +45,11 @@
       <version>5.10.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>6.0.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
