--- a/web/pom.xml
+++ b/web/pom.xml
@@ -50,5 +50,9 @@
       <version>3.1.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+    </dependency>
   </dependencies>
 </project>
