--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,16 @@
         <version>5.16.0</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.30</version>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
